--- a/war/_view/minotaursStyles.css
+++ b/war/_view/minotaursStyles.css
@@ -27,7 +27,7 @@
 		margin: 0;
 		position: absolute;
 		top: 45%;
-		left: 50%;
+		left: 50.5%;
 		margin-right: -50%;
 		transform: translate(-50%, -50%);
 		text-align: center;
@@ -50,9 +50,9 @@
 
 	}
 	table.center{
-		width:690px;
 	  	table-layout:fixed;
+	  	width:690px;
 		text-align:center;
-		word-break: break-all; 
+		word-break: break-word; 
 	}
 	
