--- a/war/_view/minotaursStyles.css
+++ b/war/_view/minotaursStyles.css
@@ -79,3 +79,14 @@
 	.closedSquare {
       	visibility: hidden;
     }
+    div.statBar{
+    	height:600px;
+    	width:50px;
+    	position: absolute;
+    	left:24%;
+    	top:3.5%;
+    }
+    img.statSymbol{
+    	height:20px;
+    	width:20px;
+    }
