--- a/war/_view/minotaursStyles.css
+++ b/war/_view/minotaursStyles.css
@@ -2,6 +2,7 @@
 		background-image: url('https://images.pexels.com/photos/235985/pexels-photo-235985.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
 		background-size: cover;
 		background-repeat: no-repeat;
+		overflow:hidden;
 	}
 	div.zeus{
 		position: absolute;
@@ -79,6 +80,7 @@
 	.closedSquare {
       	visibility: hidden;
     }
+    
     div.statBar{
     	height:600px;
     	width:50px;
@@ -90,3 +92,20 @@
     	height:20px;
     	width:20px;
     }
+    img.Vroom{
+      transform: rotate(325deg);
+    }
+    div.animation {
+  		width: 100px;
+  		height: 100px;
+  		position: absolute;
+  		animation-name: example;
+  		animation-duration: 10s;
+  		left:100%;
+  		top:100%;
+	}
+	@keyframes example {
+  		0%   {left:100%;; top:100%;}
+  		50%  {left:79%; top:79%;}
+  		100% {left:100%; top:100%;}
+}
