--- a/war/_view/minotaursStyles.css
+++ b/war/_view/minotaursStyles.css
@@ -113,7 +113,7 @@
   		0%   {left:100%;; top:100%;}
   		50%  {left:79%; top:79%;}
   		100% {left:100%; top:100%;}
-}
+	}
     div.animation2{
   		width: 100px;
   		height: 100px;
@@ -127,7 +127,7 @@
   		0%   {left:-25%;; top:-60%;}
   		50%  {left: -20%; top: -20%;}
   		100% {left:-25%; top:-60%;}
-}
+	}
     div.animation3{
   		width: 100px;
   		height: 100px;
@@ -141,4 +141,15 @@
 	@keyframes animation3 {
   		0%   {left:150%;; top:40%;}
   		100% {left:-50%; top:40%;}
-}
+	}
+	    div.animation4{
+  		position: absolute;
+  		animation-name: animation4;
+  		animation-duration: 15s;
+  		left:0%;
+  		top:100%;
+	}
+	@keyframes animation4 {
+  		50% {left: 10%; top:50%;}
+  		100%{left:0%; top:100%;}
+	}
