--- a/war/_view/minotaursStyles.css
+++ b/war/_view/minotaursStyles.css
@@ -164,3 +164,14 @@
   		50% {left: 10%; top:50%;}
   		100%{left:0%; top:100%;}
 	}
+	div.animation6{
+  		position: absolute;
+  		animation-name: animation6;
+  		animation-duration: 15s;
+  		left:0%;
+  		top:100%;
+	}
+	@keyframes animation6 {
+  		50% {left: 10%; top:50%;}
+  		100%{left:0%; top:100%;}
+	}
